# LaplataRayTracer

./: CMakeLists.txt  DemoScene.h  README.md  RayTraceDemo.aps  RayTraceDemo.cpp  RayTraceDemo.h  RayTraceDemo.rc  RayTraceDemo.sln  RayTraceDemo.vcxproj  RayTraceDemo.vcxproj.filters  RayTraceDemoDlg.cpp  RayTraceDemoDlg.h  ReadMe.txt  Resource.h  dev_log.txt  main.cpp  stdafx.cpp  test_file
ShowCaseOfScreenShoot/: A teapot.tga  AmbientOcclusion1_DemoScene.txt  Glass_Bunny.tga  OBJ_MODEL_PARSER.tga  RTGU_GlobalPath_CornelBox.tga  RTGU_global_tracer.tga  RandomSphereScene.tga  RoughGlass_Bunny.tga  box_instance_0.tga  box_instance_rotateY_60.tga  camera_zoom_in.tga  caustic_perfecto.tga  clean_wine_glass.tga  cone_texture_mapping.tga  cool_helmet.tga  copper_helmet.tga  cor_bunny1.tga  cor_bunny2.tga  cylinder_texture_mapping.tga  disk_texture_mapping.tga  from_RTGU_dielectric_test.tga  glossy_ball_stand.tga  golden_helmet.tga  helmet2.tga  instance_noise_object.tga  instance_phong_noise_based_shpere.tga  matte_wine_cup.tga  metal_ball.tga  metal_ball_stand.tga  mixture_art_effect.tga  moving_random_sphere_scene_v1_cover.tga  noise_based_texture4.tga  noise_based_texture_1.tga  noise_based_texture_2.tga  noise_based_texture_3.tga  panoramic_camera1.tga  panoramic_camera2.tga  panoramic_camera3.tga  part_cone.tga  part_cylinder.tga  (+44 more)
ext/img/: lodepng.cpp  stb_image.h
res/: RayTraceDemo.rc2
source/: AABB.h  BRDF.h  BTDF.h  Camera.h  Common.h  Console.cpp  Console.h  GeometricObject.h  GeometricObjectPlus.cpp  GeometricObjectPlus.h  GeometryObjectPlus.h  HitRecord.h  ICloneable.h  IGeometricAcceleration.h  IMeshFileReader.h  IMeshFileReaderSink.h  ImageIO.h  ImageProc.h  ImageTextureDesc.h  ImageTextureMapping.h  Instance.cpp  Instance.h  Light.h  LightObject.h  Material.h  Matrix.cpp  Matrix.h  MemBuffer.cpp  MemBuffer.h  MeshDesc.h  MeshObject.cpp  MeshObject.h  MeshTriangle.h  MicrofacetBRDF.h  MovingObject.h  Noise.cpp  Noise.h  OBJFileReader.cpp  OBJFileReader.h  PDF.cpp  (+28 more)
